Version 0.56
- Fixed a crash when selecting a custom color for messages
- Fixed a crash introduced in 0.54 with deleting contacts from the contact list
- Fixed a bug with LaTeX operations with \; in them
- Fixed a bug with pasting text into the link editor
- Fixed a beachballing issue
- Fixed an issue with initial contact list display of contacts with names pulled from the address book
- Added a submenu in the Edit and contextual menus for inserting emoticons
- Improved Message View preferences

Version 0.55 (5/8/2004)
- Fixed a crash when connecting to a Yahoo account with privacy settings enabled
- Fixed formatting when sending messages to oneself via MSN
- Fixed a crash when editing links that are in the view at load time
- Fixed emoticon pack loading to ignore empty packs
- Fixed a bug preventing Jabber names with "-" in them from connecting
- Fixed a crash when quitting while a tooltip is visible
- Fixed a bug causing passwords to be cleared unnecessarily, particularly when network errors occurred while connecting
- Disabled dragging web links into the message view
- Added advanced Webkit Message View preferences, which currently allow the customization of the contact name display in the message view.
- Improved menu performance

Version 0.54 (5/7/2004)
- Added support for displaying strikethrough, subscript, and superscript text
- Added support for basic formatting in MSN messages
- Added an option when sorting by status to sort within the status groups alphabetically by last name
- Consecutive messages are no longer combined after a 5 minutes of inactivity in the chat
- Enabled user-sent colors in the Message View
- Drastically reworked the web viewer for the SQL Logger.
- Adding new message styles no longer requires restarting Adium
- Fixed group dragging
- Fixed the remaining problems with tooltips appearing unnecessarily 
- Fixed Webkit Message View for Japanese and Chinese users (the fix in 0.53 was incomplete)